--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
-import org.gradle.api.artifacts.maven.MavenDeployment
-
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Settings
 ext {
     project_group = 'com.github.rholder'
-    project_version = '2.0.0'
-    project_jdk = '1.6'
+    project_version = '2.1.0-SNAPSHOT'
+    project_jdk = '1.8'
     project_pom = {
         name 'guava-retrying'
         packaging 'jar'
@@ -81,12 +79,10 @@ repositories {
 }
 
 dependencies {
-    compile 'com.google.guava:guava:[10.+,)'
-    compile 'com.google.code.findbugs:jsr305:2.0.2'
+    compile 'com.google.guava:guava:30.0-jre'
 
     // junit testing
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'junit:junit:4.13.1'
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -100,7 +96,7 @@ jar {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from 'build/docs/javadoc'
     doFirst {
         // Timestamp changes on every build. By evaluating it later, won't needlessly fail up-to-date checks.
@@ -109,7 +105,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
     doFirst {
         // Timestamp changes on every build. By evaluating it later, won't needlessly fail up-to-date checks.
@@ -125,32 +121,7 @@ artifacts {
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Publishing
-
-def promptPasswords() {
-    def console = System.console()
-    if (console == null) {
-        throw new RuntimeException("Console is not available. Try running from a terminal or with --no-daemon")
-    }
-
-    def sonatypeOssPassword = console.readPassword("\nEnter Sonatype password: ")
-    sonatypeOssPassword = new String(sonatypeOssPassword)
-    if (sonatypeOssPassword.size() <= 0) {
-        throw new InvalidUserDataException("Empty Sonatype password")
-    }
-
-    def signingKeyPassword = console.readPassword("\nEnter signing key password: ")
-    signingKeyPassword = new String(signingKeyPassword)
-    if (signingKeyPassword.size() <= 0) {
-        throw new InvalidUserDataException("Empty signing key password")
-    }
-
-    // set passwords globally for access elsewhere
-    allprojects { ext."signing.password" = signingKeyPassword }
-    allprojects { ext."sonatypePassword" = sonatypeOssPassword }
-
-}
-
-if(isReleaseVersion && gradle.startParameter.taskNames.contains("uploadArchives")) {
+if (isReleaseVersion && gradle.startParameter.taskNames.contains("uploadArchives")) {
     signing {
         sign configurations.archives
     }
@@ -160,33 +131,20 @@ if(isReleaseVersion && gradle.startParameter.taskNames.contains("uploadArchives"
     }
 }
 
+
 uploadArchives {
     repositories {
-        if (gradle.startParameter.taskNames.contains("uploadArchives")) {
-            mavenDeployer {
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+        mavenDeployer {
+            pom.project project_pom
 
-                // for snapshots https://oss.sonatype.org/content/repositories/snapshots
-                // for staging/release https://oss.sonatype.org/service/local/staging/deploy/maven2
-                repository(
-                        url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-                ) {
-                    promptPasswords()
-                    authentication(userName: sonatypeUsername, password: sonatypePassword)
-                }
-
-                pom.project project_pom
+            repository(url: 'http://10.10.4.180:8081/repository/maven-public') {
+                authentication(userName: 'jenkins-deploy', password: 'deploy')
+            }
+            snapshotRepository(url: 'http://10.10.4.180:8081/repository/maven-snapshots') {
+                authentication(userName: 'jenkins-deploy', password: 'deploy')
             }
         }
     }
-}
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Utilities
-
-// enable Gradle Wrapper support for bootstrapping with specific version
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.4'
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
